2001-07-25 John R. Jackson <jrj@purdue.edu>

	* docs/TAPE.CHANGER: Changes from Ben Lewis (bhlewis@purdue.edu) to
	  document the new (but optional) searchable features.

2001-07-19 John R. Jackson <jrj@purdue.edu>

	* common-src/error.c: Fix function prototype error.

2001-07-19 John R. Jackson <jrj@purdue.edu>

	* common-src/error.c: Add new function errordump() that acts like
	  error() but calls abort() to (try to) drop core.
	* common-src/amanda.h: Prototype.
	* common-src/alloc.c: Call errordump() instead of error() for some
	  memory allocation failures to aid traceback.

2001-07-19 John R. Jackson <jrj@purdue.edu>

	* server-src/amadmin.c: Improve the error message when read_conffile()
	  fails.
	* server-src/amcheck.c: Ditto.
	* server-src/amcleanupdisk.c: Ditto.
	* server-src/amflush.c: Ditto.
	* server-src/amlabel.c: Ditto.
	* server-src/amlogroll.c: Ditto.
	* server-src/amtape.c: Ditto.
	* server-src/amtrmidx.c: Ditto.
	* server-src/amtrmlog.c: Ditto.
	* server-src/driver.c: Ditto.
	* server-src/dumper.c: Ditto.
	* server-src/getconf.c: Ditto.
	* server-src/planner.c: Ditto.
	* server-src/reporter.c: Ditto.
	* server-src/taper.c: Ditto.

2001-07-19 John R. Jackson <jrj@purdue.edu>

	* server-src/driverio.c: Make the name "ps" reports match the dumper
	  name (e.g. "dumper3").

2001-07-18 John R. Jackson <jrj@purdue.edu>

	* changer-src/chg-chio.pl.in: Try to unload the drive before moving
	  a tape back to a slot.  Fixes a problem on Ecrix AutoPAK devices.
	  Patch compliments of Sam Leffler <sam@errno.com>.

2001-07-18 John R. Jackson <jrj@purdue.edu>

	* server-src/amverify.sh.in: Change to the Amanda temp directory
	  instead of the config directory.  In addition to making amverify
	  act like most other Amanda programs, this gets around an
	  xfsrestore bug.

2001-07-18 John R. Jackson <jrj@purdue.edu>

	* man/amanda.8.in: Describe the .amandahosts format better.  Clean up
	  a couple of minor typos.

2001-07-13 John R. Jackson <jrj@purdue.edu>
